# eventflow

./: .env.example  .gitignore  README.md  alembic.ini  divisao_tarefas.txt  docker-compose.yml  er-diagram.mermaid  er-diagram.mmr  main.py  pyproject.toml  todo.md
migrations/: README  env.py
migrations/versions/: 20260514_0001_create_documents_table.py  20260514_0002_create_events_table.py  20260514_0003_link_documents_to_events.py  20260514_0004_add_event_uniqueness_constraints.py  20260514_0005_create_subscriptions_table.py  20260514_0006_add_subscription_email_event_uniqueness.py  20260514_0007_create_speakers_activities_tables.py  20260514_0008_create_check_ins_table.py
scripts/: populate_events.py
src/: __init__.py  app.py
src/contracts/: __init__.py  activity_repository.py  checkin_repository.py  document_repository.py  event_repository.py  speaker_repository.py  subscription_repository.py
src/core/: README.md  __init__.py  client.py  config.py  repository.py  storage.py  uploads.py
src/data/: README.md
src/dependencies/: db.py  repositories.py  usecases.py
src/infra/: __init__.py
src/infra/db/: __init__.py  client.py  models.py  session.py
src/infra/repositories/: __init__.py  activity_repository.py  (+5 more)
src/models/: README.md  __init__.py  activity.py  base.py  checkin.py  domain.py  event.py  paginated_data.py  registration.py  speaker.py  subscription.py
src/repositories/: README.md
src/routes/: README.md  __init__.py  activity.py  checkin.py  document.py  event.py  hash.py  speaker.py  subscription.py
src/usecases/: README.md
(+72 files in other folders)
