[project]
name = "eventflow"
version = "0.1.0"
description = "EventFlow API with Delta Lake persistence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake>=0.24.0",
    "fastapi>=0.115.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.8.0",
    "scalar-fastapi>=1.8.1",
    "uvicorn[standard]>=0.30.0",
    "zipstream-ng>=1.9.0",
]
