[project]
name = "eventflow"
version = "0.1.0"
description = "EventFlow API with FastAPI, SQLModel, and async relational persistence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "deltalake>=0.24.0",
    "fastapi[standard]>=0.136.1",
    "fastapi-pagination>=0.15.12",
    "faker>=25.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "pyarrow>=18.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "scalar-fastapi>=1.8.1",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.47.0",
    "zipstream-ng>=1.9.0",
]
